--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-hexapinod",
-  "version": "1.0.0",
+  "version": "v1.0.0",
   "description": "Easily generate a new Hexapinod projet with the selected features.",
   "main": "main.cjs",
   "scripts": {
@@ -14,15 +14,26 @@
     "node",
     "javascript"
   ],
-  "author": "cecric",
-  "license": "MIT",
+  "contributors": [
+    {
+      "name": "Cédric LESEC",
+      "email": "cedric.lesec@gmail.com"
+    }
+  ],
+  "private": false,
+  "license": "MIT license",
   "bugs": {
-    "url": "https://github.com/cecric/create-hexapinod/issues"
+    "url": "https://github.com/cecric/create-hexapinod/issues",
+    "email": "cedric.lesec@gmail.com"
   },
   "homepage": "https://github.com/cecric/create-hexapinod#readme",
   "bin": {
     "create-hexapinod": "main.cjs",
     "ch": "main.cjs"
+  },
+  "funding": {
+    "type": "individual",
+    "url": "https://www.buymeacoffee.com/cecric"
   },
   "engines": {
     "node": ">=14"
